# pam_reattach

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml
cmake/Modules/: FindPAM.cmake
include/: reattach.h
man/: pam_reattach.8  reattach-to-session-namespace.8  reattach_aqua.3
src/: bootstrap.h  cli.c  pam.c  pam_reattach.c  reattach.c  xpc.h
